fix cut off issue in projects section

--- a/zohebsportfolio/src/index.css
+++ b/zohebsportfolio/src/index.css
@@ -168,6 +168,6 @@
   }
 
   .clip-path-wave {
-    clip-path: polygon(0% 0%, 100% 0%, 100% 85%, 0% 100%);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 95%, 0% 100%);
   }
 }
